k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-go-web-demo-service
  labels:
    app: k8s-go-web-demo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: k8s-go-web-demo
